# QFT-Dynamic-Circuit

./: .env.example  .gitignore  AGENTS.md  check_measurement_encode.ipynb  justfile  main.py  pyproject.toml
.agents/skills/matplotlib/: SKILL.md
benches/: bench_fidelity.py  bench_perfect_enc.py  bench_shor_depolarized.py  bench_shor_simulation.py  bench_shor_strict.py  find_best_batch_size.py
devtools/: compare_finite_q_sampling.py  validate_shor_simulation_vs_finite_q.py
docs/: shor-benchmark.md
plots/: matplotlib_config.py  plot_config.toml  plot_fidelity.py  plot_find_best_batch_size.py  plot_perfect_enc.py  plot_shor_depolarized.py  plot_shor_strict.py
src/: bench_fidelity.py  bench_perfect_enc.py  bench_shor_simulation.py  bench_shor_strict.py  find_best_batch_size.py
src/qft_dynamic/: __init__.py
src/qft_dynamic/shor_benchmark/: __init__.py  protocols.py  samplers.py  schemas.py  simulation.py  strict_eval.py  strict_postprocess.py  types.py
src/qft_dynamic/tools/: __init__.py  build_backend.py  config.py  data_process.py  simulation.py  transpile.py
src/shor_benchmark/: __init__.py  baselines.py  config.py  samplers.py  schemas.py  simulation.py  strict_eval.py  strict_postprocess.py  types.py
src/tools/: build_backend.py  build_circuits.py  data_process.py  transpile.py
tests/: test_config.py  test_shor_baselines.py  test_shor_config.py  test_shor_samplers.py  test_shor_simulation.py  test_shor_strict_eval.py  test_shor_strict_postprocess.py  test_shor_types.py
