[project]
name = "qft-dynamic-circuit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-provider>=0.11.0",
    "qiskit-ibm-runtime>=0.42.0",
    "qiskit[visualization]>=2.2.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]
