[project]
name = "qft-dynamic-circuit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cirq>=1.6.1",
    "matplotlib>=3.10.6",
    "pydantic>=2.12.0",
    "python-dotenv>=1.2.2",
    "qiskit-aer>=0.17.2",
    "qiskit-ibm-provider>=0.11.0",
    "qiskit-ibm-runtime>=0.42.0",
    "qiskit[visualization]>=2.2.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
plugins = ["numpy.typing.mypy_plugin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:Since backends now support running jobs that contain both fractional gates and dynamic circuit.*:DeprecationWarning:stevedore\\.extension",
    "ignore:Duration is rounded to .*:UserWarning:qiskit\\.circuit\\.duration",
    "ignore:The property ``qiskit\\.dagcircuit\\.dagcircuit\\.DAGCircuit\\.unit`` is deprecated.*:DeprecationWarning:qiskit_ibm_runtime\\.transpiler\\.passes\\.scheduling\\.block_base_padder",
    "ignore:The property ``qiskit\\.dagcircuit\\.dagcircuit\\.DAGCircuit\\.duration`` is deprecated.*:DeprecationWarning:qiskit_ibm_runtime\\.transpiler\\.passes\\.scheduling\\.block_base_padder",
]
